<resources>
    <string name="app_name">FoodConsumption3</string>
    <string name="button_add_record">Add Record</string>
    <string name="button_exit">Exit</string>
    <string name="nav_open">Nav Open</string>
    <string name="nav_close">Nav Close</string>
    <string name="label_food_name">Food Name</string>
    <string name="label_calories">Calories</string>
    <string name="label_quantity">Quantity:</string>
    <string name="lable_date">Date:</string>
    <string name="edit_food_name" />
    <string name="edit_calories" />
    <string name="edit_quantity" />
    <string name="button_save">Save</string>
    <string name="button_back">Back</string>
</resources>
