<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddRecord">

    <TextView
        android:id="@+id/lbl_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_food_name" />

    <EditText
        android:id="@+id/edit_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_food_name" />

    <TextView
        android:id="@+id/lbl_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_calories" />

    <EditText
        android:id="@+id/edit_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/edit_calories" />

    <TextView
        android:id="@+id/lbl_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_quantity" />

    <EditText
        android:id="@+id/edit_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/edit_quantity" />

    <TextView
        android:id="@+id/lbl_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lable_date" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back" />

</LinearLayout>